--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -9,6 +7,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 22181:2181
+    networks:     
+      - demo-katok      
 
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -16,15 +16,17 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - 29092:29092
+      - "29092:29092/tcp"
     hostname: kafka
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:     
+      - demo-katok
 
   consul-server:
     image: hashicorp/consul:1.17
@@ -38,4 +40,14 @@ services:
       - "8501:8500"
       - "8601:8600/tcp"
       - "8601:8600/udp"
+    environment:
+      - CONSUL_ENABLED=true
+      - CONSUL_URL=http://127.0.0.1:8501
+      - CONSUL_CONFIG_PATH=kafka/config
+      - CONSUL_TOKEN=22b0d8ea-1353-c80c-7745-8f0cc2cec01d     
     command: "agent"
+    networks:     
+      - demo-katok
+
+networks:
+  demo-katok:
